# pandas2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  circle.yml  setup.py
build-support/: run-test.sh
ci/: script.sh
cmake_modules/: FindClangTools.cmake
codegen/: dispatch.py  kernel.py  types.py  util.py
codegen/tests/: test_dispatch.py  test_types.py
pandas/: native.pxd  native.pyx
pandas/internals/: config.pyx
scripts/: circleci_build.sh  merge-pr.py  merge-py.py
src/: .clang-format
src/pandas/: CMakeLists.txt  api.h  array-numeric-test.cc  array-test.cc  array.cc  array.h  array_fwd.h  buffer-test.cc  buffer.cc  buffer.h  catch_exception.h  common.cc  common.h  config.h  dispatch.cc  dispatch.h  expr.cc  expr.h  init.h  kernel-test.cc  kernel.h  memory-test.cc  memory.cc  memory.h  numpy_interop-test.cc  numpy_interop.cc  numpy_interop.h  pytypes.cc  pytypes.h  status.cc  status.h  table.h  test-util.h  type.cc  type.h  type_traits.cc  type_traits.h  types.cc  types.h  util-test.cc  (+3 more)
src/pandas/kernels/: CMakeLists.txt  take.cc  take.h  unary_math.h  util.h
src/pandas/meta/: CMakeLists.txt  typelist-test.cc  typelist.h
src/pandas/operations/: item_selection.cc
src/pandas/types/: boolean.cc  boolean.h  category.cc  category.h  common.cc  common.h  floating.cc  floating.h  integer.cc  integer.h  numeric-test.cc  numeric.cc  numeric.h  numeric_fwd.h  pyobject.cc  pyobject.h
src/pandas/util/: CMakeLists.txt  bit-util.cc  bit-util.h  bitarray-test.cc  bitarray.cc  bitarray.h  logging.h  macros.h  test_main.cc
